--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/2010psw/gulp#readme",
   "devDependencies": {
-    "gulp": "^4.0.2",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
-    "@babel/register": "^7.12.10"
+    "@babel/register": "^7.12.10",
+    "gulp": "^4.0.2",
+    "gulp-pug": "^4.0.1"
   }
 }
